add favicon and ogg

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Портфолио Кости Остроухова, web-дизайнера. Web-дизайн, анимация, разработка, 3D."
     />
+
+    <meta property="og:title" content="Портфолио Кости Остроухова, web-дизайнера. Web-дизайн, анимация, разработка, 3D."/>
+    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg"/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
