--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Портфолио Кости Остроухова, web-дизайнера. Web-дизайн, анимация, разработка, 3D."
+      content="Костя Остроухов, web-дизайн, анимация, разработка, 3D."
     />
 
-    <meta property="og:title" content="Портфолио Кости Остроухова, web-дизайнера. Web-дизайн, анимация, разработка, 3D."/>
+    <meta property="og:title" content="Костя Остроухов, web-дизайн, анимация, разработка, 3D."/>
     <meta property="og:image" content="%PUBLIC_URL%/preview.jpg"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
