--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Костя Остроухов, web-дизайн, анимация, разработка, 3D."
+      content="Kostya Ostroukhov, web-design, animation, development, 3D."
     />
 
-    <meta property="og:title" content="Костя Остроухов, web-дизайн, анимация, разработка, 3D."/>
+    <meta property="og:title" content="Kostya Ostroukhov, web-design, animation, development, 3D."/>
     <meta property="og:image" content="%PUBLIC_URL%/preview.jpg"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Костя Остроухов, web-дизайнер</title>
+    <title>Kostya Ostroukhov, web-designer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
